added about section and sass

--- a/index.html
+++ b/index.html
@@ -23,7 +23,33 @@
             </h1>
             <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
        </div>
-       
     </header>
+
+    <main>
+        <section class="section-about">
+            <div class="center-text margin-bottom-big">
+                <h2 class="heading-secondary">
+                Exciting tours for adventurous people
+                </h2>
+            </div>
+        
+        <div class="flex-items two-col">
+            <div class="first-item">
+                <h3 class="heading-tertiary margin-bottom-small">You're going to fall in love with nature</h3>
+                <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quisquam, eveniet facilis ducimus nesciunt quam. Blanditiis quos soluta aperiam? Fugit doloribus odio dolores quo dolore, voluptas culpa possimus ab incidunt!</p>
+                <h3 class="heading-tertiary margin-bottom-small">Live adventures like you never had before</h3>
+                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit qui consectetur nulla minima sit debitis.</p>
+                <a href="#" class="btn-text">Learn more &rarr;</a>
+            </div>
+            <div class="second-item">
+                <div class="composition">
+                    <img src="img/nat-1-large.jpg" alt="photo one" class="composition_photo composition_photo--p1">
+                    <img src="img/nat-2-large.jpg" alt="photo two" class="composition_photo composition_photo--p2">
+                    <img src="img/nat-3-large.jpg" alt="photo three" class="composition_photo composition_photo--p3">
+                </div>
+            </div>
+        </div>
+        </section>
+    </main>
 </body>
 </html>
