--- a/index.html
+++ b/index.html
@@ -80,9 +80,118 @@
                         <h3 class="heading-tertiary margin-bottom-small">Explore the world</h3>
                          <p class="feature-box_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
-
                 </div>
             </div>
+        </section>
+
+        <section class="section-tours">
+            <div class="center-text margin-bottom-big">
+                <h2 class="heading-secondary">
+                Most popular tours
+                </h2>
+            </div> 
+            
+            <div class="container">
+                <div class="flex-items">
+                    <div class="card">
+                        <div class="card_side card_side--front">
+                            <div class="card_picture card_picture--1">
+                                &nbsp;
+
+                            </div>
+                            <h4 class="card_heading">
+                                <span class="card_heading-span card_heading-span--1">The sea explorer</span>
+
+                            </h4>
+                            <div class="card_details">
+                                <ul>
+                                    <li>3 day tours</li>
+                                    <li>Up to 30 people</li>
+                                    <li>2 tour guides</li>
+                                    <li>Sleep in cozy hotels</li>
+                                    <li>Difficulty:easy</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card_side card_side--back card_side--back-1">
+                            <div class="card_cta">
+                                <div class="card_price-box">
+                                    <p class="card_price-only">Only</p>
+                                    <p class="card_price-value">$297</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_side card_side--front">
+                            <div class="card_picture card_picture--2">
+                                &nbsp;
+
+                            </div>
+                            <h4 class="card_heading">
+                                <span class="card_heading-span card_heading-span--2">The forest hiker</span>
+
+                            </h4>
+                            <div class="card_details">
+                                <ul>
+                                    <li>7 day tours</li>
+                                    <li>Up to 40 people</li>
+                                    <li>6 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>Difficulty:medium</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card_side card_side--back card_side--back-2">
+                            <div class="card_cta">
+                                <div class="card_price-box">
+                                    <p class="card_price-only">Only</p>
+                                    <p class="card_price-value">$497</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_side card_side--front">
+                            <div class="card_picture card_picture--3">
+                                &nbsp;
+
+                            </div>
+                            <h4 class="card_heading">
+                                <span class="card_heading-span card_heading-span--3">The snow adventurer</span>
+
+                            </h4>
+                            <div class="card_details">
+                                <ul>
+                                    <li>5 day tours</li>
+                                    <li>Up to 15 people</li>
+                                    <li>3 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>Difficulty:hard</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card_side card_side--back card_side--back-3">
+                            <div class="card_cta">
+                                <div class="card_price-box">
+                                    <p class="card_price-only">Only</p>
+                                    <p class="card_price-value">$897</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now</a>
+                            </div>
+                        </div>
+                    </div>
+
+                 </div>
+            </div>
+            <div class="center-text margin-top-big">
+                <a href="#" class="btn btn--green">Discover all tours</a>
+            </div> 
+
         </section>
     </main>
 </body>
