added new sections

--- a/index.html
+++ b/index.html
@@ -193,6 +193,90 @@
             </div> 
 
         </section>
+        <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video_content" autoplay muted loop>
+                    <source src="img/video.mp4" type="video/mp4">
+                    <source src="img/video.webm" type="video/webm">
+                        Your browser is not supported! 
+                </video>
+            </div>
+            <div class="center-text margin-bottom-big">
+                <h2 class="heading-secondary">
+                We make people genuinely happy
+                </h2>
+            </div>
+            <div class="container">
+                <div class="story">
+                    <figure class="story_shape">
+                        <img src="img/nat-8.jpg" alt="Person on a tour" class="story_img">
+                        <figcaption class="story_caption">Mary Smith</figcaption>
+                    </figure>
+                    <div class="story_text">
+                        <h3 class="heading-tertiary margin-bottom-small">I had best week ever with my family</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quisquam, eveniet facilis ducimus nesciunt quam. Blanditiis quos soluta aperiam? Fugit doloribus odio dolores quo dolore, voluptas culpa possimus ab incidunt!</p>
+                    </div>
+                </div>
+                <div class="story">
+                    <figure class="story_shape">
+                        <img src="img/nat-9.jpg" alt="Person on a tour" class="story_img">
+                        <figcaption class="story_caption">Jack Wilson</figcaption>
+                    </figure>
+                    <div class="story_text">
+                        <h3 class="heading-tertiary margin-bottom-small">My life is completely different now</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quisquam, eveniet facilis ducimus nesciunt quam. Blanditiis quos soluta aperiam? Fugit doloribus odio dolores quo dolore, voluptas culpa possimus ab incidunt!</p>
+                    </div>
+                </div>
+                <div class="center-text margin-top-big">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
+                </div> 
+            </div>
+        </section>
+        
+        <section class="section-book">
+            <div class="container">
+                <div class="book">
+                    <div class="book-form">
+                        <form action="#" class="form">
+                            <div class="margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                Start booking now
+                                </h2>
+                            </div> 
+                            <div class="form_group">
+                                <input type="text" class="form_input" placeholder="Full Name" id="Name" required>
+                                <label for="Name" class="form_label">Full Name</label>
+                            </div>
+
+                            <div class="form_group">
+                                <input type="email" class="form_input" placeholder="Email address" id="email" required>
+                                <label for="email" class="form_label">Email address</label>
+                            </div>
+                            <div class="form-group margin-bottom-small">
+                                <div class="form_radio-group">
+                                    <input type="radio" class="form_radio-input" id="small" name="size">
+                                    <label for="small" class="form_radio-label">
+                                        <span class="form_radio-button"></span>
+                                        Small tour group</label>
+                                </div>
+                                <div class="form_radio-group">
+                                    <input type="radio" class="form_radio-input" id="large" name="size">
+                                    <label for="large" class="form_radio-label">
+                                        <span class="form_radio-button"></span>
+                                        Large tour group</label>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <button class="btn btn--green">Next step &rarr;</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 </body>
 </html>
