--- a/index.html
+++ b/index.html
@@ -275,8 +275,28 @@
                 </div>
             </div>
         </section>
-
-
     </main>
+
+    <footer class="footer">
+        <div class="footer_logo-box">
+            <img src="img/logo-green-2x.png" alt="Full logo" class="footer_logo">
+        </div>
+        <div class="container">
+            <div class="flex-items">
+                <div class="footer_navigation">
+                    <ul class="footer_list">
+                        <li class="footer_item"><a href="#" class="footer_link">Company</a></li>
+                        <li class="footer_item"><a href="#" class="footer_link">Contact us</a></li>
+                        <li class="footer_item"><a href="#" class="footer_link">Careers</a></li>
+                        <li class="footer_item"><a href="#" class="footer_link">Privacy policy</a></li>
+                        <li class="footer_item"><a href="#" class="footer_link">Terms</a></li>
+                    </ul>
+                </div>
+                <div class="footer_copyright third-item">
+                    <p>Copyright &copy; lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, laboriosam eius libero qui deserunt vel recusandae? Cumque perspiciatis eum iste maiores nostrum nam distinctio earum, nihil illum quaerat atque ipsam!</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
